2005-08-09  Luc Pionchon  <luc.pionchon@nokia.com>

	Backported upstream fix
	* gtk/gtkdialog.c (gtk_dialog_map): Don't
	try to focus the default_widget if there is 
	none.  (#169881, Thomas Leonard)
	
2005-08-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk-pixbuf/io-jpeg.c (fatal_error_handler): Report out of memory
	error correctly instead of as corrupt image.  (#312674, Tommi
	Komulainen)

2005-08-05  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Merge patch by Kristian Rietveld from GNOME CVS:

	* gtk/gtkentry.c (gtk_entry_move_forward_word): don't iterate
	past the end of the string, so pango_layout_get_cursor_pos() won't
	complain. (#309211, Tommi Komulainen).

2005-08-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktextbuffer.c(clipboard_text_view_markup_received): Do not try
	to deserialize rich text if the clipboard request failed. Stop leaking
	the error.

2005-08-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtktreemodelfilter.c
	(gtk_tree_model_filter_row_has_child_toggled): keep
	GtkTreeModelFilter and GtkTreeModelSort cache in
	sync. http://bugzilla.gnome.org/show_bug.cgi?id=311955
	
	* gtk/gtkmenushell.[ch]: Added new "close" signal which closes
	only current menu level and not its parent.

2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtkcombobox.c: Adds a new boolean property called
	"propagate-lr-keys" to GtkComboBox. When set to TRUE (its default
	value is FALSE), the key-press events for GDK_Left and GDK_Right
	keys are propagated further as in stock GTK+. However, the default
	behaviour for GtkComboBox must be to eat up key-press events for
	left/right hardkeys, because otherwise focus might be shifted away
	from the choice list when items contained in it are browsed using
	left/right hardkeys. The added property allows overriding this
	default behaviour in special occasions such as this.
	
	* gtk/gtkcombobox.c (gtk_combo_box_menu_size_request): width of