@@ -1,3 +1,9 @@
+2005-08-10  Luc Pionchon  <luc.pionchon@nokia.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_insert_column)
+    	(gtk_tree_view_remove_column) Added allow_checkbox_mode checks
+        N#16571 
+
 2005-08-09  Luc Pionchon  <luc.pionchon@nokia.com>
 
 	Backported upstream fix
